[package]
name = "meshmon"
version = "0.3.0"
authors = ["Bart Noordervliet <bart@mmvi.nl>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "*"
futures-util = "*"
toml = "0"
base64 = "0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "*"
rmp-serde = "1"
crypto_box = "0.8"
rand = "0"
byteorder = "*"
sysinfo = "0"
generic-array = "0"
petgraph = "0.6"
clap = "4"
pnet = "0"
pnet_datalink = "0"
ipnetwork = "0"
warp = { version = "0.3", features = ["default", "tls"] }
lazy_static = "1"
tui = { version = "0.19", default-features = false, features = ['termion'] }
termion = "2"
chrono = "0"
git-version = "*"

[profile.release]
strip = true
#lto = "thin"
