[package]
name = "meshmon"
version = "0.3.0"
authors = ["Bart Noordervliet <bart@mmvi.nl>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "*", features = [ "compat" ] }
tokio-stream = { version = "*", features = [ "net" ], optional = true }
futures-util = { version = "*", optional = true }
async-trait = { version = "*", optional = true }
toml = "0"
base64 = "0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "*"
rmp-serde = "1"
ring = { version = "*", optional = true }
crypto_box = "0.9"
rand = "0"
byteorder = "*"
sysinfo = "0"
generic-array = "1"
petgraph = "0.6"
clap = "4"
pnet = "0"
pnet_datalink = "0"
ipnetwork = "0"
hyper = { version = "1", features = [ "http1", "http2", "server" ], optional = true }
hyper-util = { version = "*", optional = true }
hyper-tungstenite = { version = "*", optional = true }
http-body-util = { version = "0", optional =  true }
rustls-acme = { version = "*", features = [ "tokio" ], optional = true }
lazy_static = "1"
tui = { version = "0.19", default-features = false, features = ['termion'], optional = true }
termion = { version = "3", optional = true }
chrono = "0"
git-version = "*"
regex = "*"

[features]
web = ["dep:hyper", "dep:hyper-util", "dep:hyper-tungstenite", "dep:http-body-util", "dep:tokio-stream", "dep:futures-util", "dep:rustls-acme", "dep:async-trait", "dep:ring"]
tui = ["dep:tui", "dep:termion"]

[profile.release]
strip = true
#lto = true
